src/client/app.scss
html, body, #main {
    height: 100%;
    width: 100%; 
} 
 
body, div {
    box-sizing: border-box;
}

body {
    font-size: 12px;
    color: white; 
    padding: 0;
    margin: 0;
    background-color: #3d5e4c;
    -webkit-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.75);
    box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.75); 
}
   
#main.map { 
    display: grid;
    height: 100%;
    grid-template-columns: 1fr;
    grid-template-rows: .5fr 5fr;
    grid-gap: 1px;
    grid-template-areas: "." ".";

    & > div:first-child {  
        display: grid;
        height: 100%;
        grid-template-columns: 1fr 3fr 6fr; 
        grid-gap: 1px;
        grid-template-areas: ". . .";
    
        & > div:last-child {  
            text-align: right;
        }
    } 

    & > div:not(:nth-child(2)) {
        padding: 1%;
    }

    & > div:nth-child(2) {
        border-top: 1px solid black;
        border-bottom: 1px solid black;

        background-color: grey;
    }
}

